логотип з текстом, убрано фон, посилання адреса

--- a/index.html
+++ b/index.html
@@ -11,28 +11,24 @@
     <header>
         <nav>
             <!--Logo_header-->
-            <a href="/">
-                <img src="./images/WebStudio.svg" alt="WebStudio" width="145" height="31">
-            </a>
+            <a href="./index.html">WebStudio</a>
             <!--Main_nav-->
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="#">Портфолио</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
         <!--Contacts-->
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-        
+        </ul>   
     </header>
     <!--Main-->
     <main>
         <!--Шапка-->
         <section>
-            <img src="./images/Bg.jpg" alt="Bg" width="1600" height="600">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
@@ -96,14 +92,11 @@
     </main>
     <!--Footer-->
     <footer>
-        <img src="./images/Bg.jpg" alt="Bg" width="1600" height="252">
         <!--Logo_footer-->
         <address>
-            <a href="/">
-                <img src="./images/WebStudio.svg" alt="WebStudio" width="145" height="31">
-            </a>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
+                <li><a href="https://goo.gl/maps/iMgcqix1b4V4BPn3A" target="_blank" rel="nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
